Fixing minor alignemnts
fixing minor paddings and margins on bio-content

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -224,6 +224,7 @@ body p {
     justify-content: center;
     align-items: center;
     margin: auto;
+    padding-top: 5rem;
 }
 
 .bio-content-center h1,
